# norwegian-vocab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  mkdocs.yml  pyproject.toml  shopping_clothes.tsv  travel_hotel.tsv  weather_outdoors.tsv
.agents/rules/: vocab_rules.md
.github/workflows/: deploy-mkdocs.yml
codex/rules/: vocab_rules.md
docs/: index.md
docs/stylesheets/: extra.css
docs/vocab/: banking_post.md  gp_office.md  grocery_store.md  health_pharmacy.md  housing_home.md  library_media.md  phone_internet.md  restaurant_cafe.md  school.md  shopping_clothes.md  social_chitchat.md  transportation.md  travel_hotel.md  weather_outdoors.md  work_office.md
scripts/docs/: precommit_sync_vocab_docs.sh  sync_vocab_docs.py
scripts/forvo_audio/: add_forvo_audio.py  audio_index.json  audio_naming.py  audio_paths.py  audio_queries.py  forvo_download.py  pending_words.py  tsv_to_markdown.py  vocab_tsv.py
site/: 404.html
tests/: test_add_forvo_audio.py
trash/: social_chitchat.tsv  travel_hotel.tsv
vocab/: banking_post.md  banking_post.tsv  gp_office.md  gp_office.tsv  grocery_store.md  grocery_store.tsv  health_pharmacy.md  health_pharmacy.tsv  housing_home.md  housing_home.tsv  library_media.md  library_media.tsv  phone_internet.md  phone_internet.tsv  restaurant_cafe.md  restaurant_cafe.tsv  school.md  school.tsv  shopping_clothes.md  shopping_clothes.tsv  social_chitchat.md  social_chitchat.tsv  transportation.md  transportation.tsv  travel_hotel.md  travel_hotel.tsv  weather_outdoors.md  weather_outdoors.tsv  work_office.md  work_office.tsv
(+29 files in other folders)
